fix: close chat when delete and patch name too big because I didn't do it right last time (#86)

--- a/frontend/src/routes/chat/style.css
+++ b/frontend/src/routes/chat/style.css
@@ -113,14 +113,11 @@ html, body {
   border-bottom: 2px solid rgb(171, 170, 170);
   width: 80%;
   margin-left: 50px;
-  min-height: 450px;
+  min-height: 330px;
   list-style-type: none;
   overflow-y: scroll;
   scrollbar-width: thin;
   scrollbar-color: #888 transparent;
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: flex-end;
 }
 .flex-container .left .chat-info {
   display: flex;
@@ -134,6 +131,7 @@ html, body {
   position: relative;
   margin-bottom: 100px;
 }
+
 .flex-container .left .invitation-list {
   list-style-type: none;
   width: 85%;
@@ -178,9 +176,10 @@ html, body {
   overflow: hidden;
 }
 .flex-container .middle .chat-block .chat-output-block #chat-header .room-name {
-  display: inline-flex;
-  align-items: center;
   font-size: 2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 80%;
 }
 .flex-container .middle .chat-block .chat-output-block #chat-log {
   font-family: isaac-bold;
@@ -508,8 +507,10 @@ html, body {
   margin-right: 10px;
 }
 .room .room-name-left {
-  display: inline-flex;
-  align-items: center;
+  /* display: inline-flex;
+  align-items: center; */
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .invite-test {
@@ -657,4 +658,9 @@ input[type=text]:focus {
 
 #chat-message-submit {
   display: none;
-}/*# sourceMappingURL=style.css.map */
+}
+
+input[type="text"] {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
